--- a/stock/dashboard/templates/dashboard/purchase.html
+++ b/stock/dashboard/templates/dashboard/purchase.html
@@ -53,7 +53,7 @@
                                  {{item.supplier.contact}}
                              </td>
                              <td>
-                                 <a href="#"  class="update_return" data-pk="{{item.pk}}" >
+                                 <a href="#"  class="update_purchase" data-pk="{{item.pk}}" >
                                     Edit
                                  </a>
                              </td>
@@ -67,22 +67,25 @@
     
 <div  class="container__right" id="container__right">
                     
-    {% include 'dashboard/modal_for_CreateReturnProduct.html'%}
+    {% include 'dashboard/modal_for_createPurchase.html'%}
                
 </div> 
 <script>
-    $('.update_return').click(function(){
+   $(function(){
+       $('.update_purchase').click(function(){
+           console.log($(this).attr('data-pk'));
         $.ajax({
-    url:'/dashboard/product/return/update',
-    type:'get',
-    data:{'id':$(this).attr('data-pk')},
-    dataType:'json',
-    success:function(data){
-        document.getElementById('container__right').innerHTML=data.modal_for_UpdateReturnProduct
-    
-    }
-})
-    })
+            url:'/dashboard/purchase/product/update/',
+            type:'get',
+            data:{'pk':$(this).attr('data-pk')},
+            dataType:'json',
+            success:function(response){
+                document.getElementById('container__right').innerHTML=response.modal_for_updatePurchaseProduct
+
+            }
+        })
+       })
+   })
 </script>
 
 {% endblock %}
